<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/userImageNavHeader"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toTopOf="@+id/loginButtonNavHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/profiledefault" />

    <TextView
        android:id="@+id/userNameNavHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
        app:layout_constraintTop_toTopOf="@+id/userImageNavHeader" />

    <TextView
        android:id="@+id/userEmailNavHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/userNameNavHeader"
        app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader"
        app:layout_constraintVertical_bias="0.112" />

    <Button
        android:id="@+id/loginButtonNavHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:onClick="loginButtonOnClick"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/userImageNavHeader" />

    <ImageButton
        android:id="@+id/addButtonNavHeader"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_name"
        android:onClick="addChannelClicked"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/loginButtonNavHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/addchannelbutton" />
</androidx.constraintlayout.widget.ConstraintLayout>